--- a/home.htm
+++ b/home.htm
@@ -27,7 +27,7 @@
   <title>Lesson 5 - Learning subtraction</title>
 </head>
 <body>
-  <h1>DumbProxy FINAL VERSION 
+  <h1>DumbProxy FINAL VERSION (by InkBoyM) 
   (realese 1.0)</h1>
   <input type="text" id="urlInput" placeholder="Enter URL (without https://)" />
   <button onclick="generatePage()">click me beta to open page (moan)</button>
