--- a/home.htm
+++ b/home.htm
@@ -30,7 +30,7 @@
   <h1>DumbProxy FINAL VERSION (by InkBoyM) 
   (realese 1.0)</h1>
   <input type="text" id="urlInput" placeholder="Enter URL (without https://)" />
-  <button onclick="generatePage()">click me beta to open page (moan)</button>
+  <button onclick="generatePage()">click here</button>
 
   <div id="output" style="display:none;">
     <embed type="text/plain" width="1024" height="768" id="embedCode" />
